--- a/_angular-app/src/app/components/pages/category/category-new-modal/category-new-modal.component.html
+++ b/_angular-app/src/app/components/pages/category/category-new-modal/category-new-modal.component.html
@@ -2,20 +2,14 @@
   <modal (onHide)="hideModal($event)">
     <h5 modal-title>Nova Categoria</h5>
     <div modal-body>
-      <div class="form-group">
-        <input type="text" class="form-control" id="name" name="name" required
-               [(ngModel)]="category.name">
-        <label for="name">Nome</label>
-      </div>
-      <div class="form-group form-check">
-        <input type="checkbox" class="form-check-input" id="active" name="active" required
-               [(ngModel)]="category.active">
-        <label for="active">Ativo?</label>
-      </div>
+      <card-error *ngIf="showErrors()">
+        <list-error [errors]="errors"></list-error>
+      </card-error>
+      <category-form [form]="form"></category-form>
     </div>
     <div modal-footer>
       <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-      <button type="submit" class="btn btn-primary">Incluir</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Incluir</button>
     </div>
   </modal>
 </form>
